Regression: Cycles: Weird Mesh Light Sampling #112931

Closed
opened 2023-09-27 02:50:00 +02:00 by Alaska · 6 comments
Member

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-26 06:58, hash: 3514d6ed52a3
Worked: 3.5.X, and likely 3.6.X

Short description of error
Mesh lights show weird sampling patterns. Most noticeable when the bounding box of the mesh light intersects with a surface.
Example sampling pattern.png

Exact steps for others to reproduce the error
Download attached file and render it in Cycles. Then compare it to previous versions of Blender.

If you need to make this scene from scratch:

  1. Create a plane. This is the ground.
  2. Create another plane, this is our mesh light, and rotated it 45 degrees so it intersects with the ground.
  3. Give the mesh light plane an emission shader and render it in Cycles.
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-26 06:58, hash: `3514d6ed52a3` Worked: 3.5.X, and likely 3.6.X **Short description of error** Mesh lights show weird sampling patterns. Most noticeable when the bounding box of the mesh light intersects with a surface. ![Example sampling pattern.png](/attachments/0fe0e191-cf95-447b-a0e6-4ab43c17f1e7) **Exact steps for others to reproduce the error** Download attached file and render it in Cycles. Then compare it to previous versions of Blender. If you need to make this scene from scratch: 1. Create a plane. This is the ground. 2. Create another plane, this is our mesh light, and rotated it 45 degrees so it intersects with the ground. 3. Give the mesh light plane an emission shader and render it in Cycles.
Alaska added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-09-27 02:50:01 +02:00

Can confirm, broken between 0a004fbad4 and ab6860f3de

Can confirm, broken between 0a004fbad460 and ab6860f3de0f
Richard Antalik changed title from Regression: Cycles: Weird Mesh Light Sampling to Regression: Cycles: Weird Mesh Light Sampling 2023-09-27 04:03:51 +02:00
Iliya Katushenock added
Module
Render & Cycles
and removed
Interest
Render & Cycles
labels 2023-09-27 07:31:46 +02:00
Member

Suspect is 97d9bbbc97 , will double-check

Suspect is 97d9bbbc97f85e4d309c843a063a73123265e317 , will double-check
Member

@weizhen : could you check?

@weizhen : could you check?

@lichtwerk Weizhen is away for the next 6 months, so I will handle this bug.

@lichtwerk Weizhen is away for the next 6 months, so I will handle this bug.

This might not be the most exciting news to you but it renders properly when setting Emission Sampling of the emitting grid to "none".

image
image

This might not be the most exciting news to you but it renders properly when setting Emission Sampling of the emitting grid to "none". ![image](/attachments/63129fd1-ad46-405c-b753-6a11cc31b873) ![image](/attachments/5cbf20bf-0714-406a-8ae3-01365115a476)
1.6 MiB
7.8 KiB

Yes, it's expected because that option disables the code that was changed in 97d9bbbc97.

Yes, it's expected because that option disables the code that was changed in 97d9bbbc97f85e4d309c843a063a73123265e317.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-02 19:23:31 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112931
No description provided.