Fix #112931: Cycles mesh light sampling artifacts